--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -16,12 +16,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Theme, Vision, Mission</h4>
+                                    <h4>Mission</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Read more about our Theme, Vision, and Mission</p>
+                                    <p class="text-muted">Camp Corgi aims to take care of our guests needs while also providing advanced training services.</p>
                                 </div>
-                                <a href="/about" class="page-scroll btn btn-sm">Learn More</a>
+                                <!-- <a href="/about" class="page-scroll btn btn-sm">Learn More</a> -->
                             </div>
                         </li>
                         <li class="timeline-inverted">
@@ -33,9 +33,8 @@
                                     <h4>Agenda</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Check out the agenda</p>
+                                    <p class="text-muted">Camp Corgi includes scheduled times for walks, play, and training!</p>
                                 </div>
-                                <a href="/agenda" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
                         </li>
                         <li>
@@ -47,9 +46,9 @@
                                     <h4>Team</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Find out the team members</p>
+                                    <p class="text-muted">Camp Corgi has staff around the clock to meet any of your corgi's needs.</p>
                                 </div>
-                                <a href="/team" class="page-scroll btn btn-sm">Learn More</a>
+                                <!-- <a href="/team" class="page-scroll btn btn-sm">Learn More</a> -->
                             </div>
                         </li>
                         <li class="timeline-inverted">
@@ -58,40 +57,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Venue</h4>
+                                    <h4>Location, Location, Location</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Learn more about our location</p>
+                                    <p class="text-muted">Located in the renowned Middle Sackville, Camp Corgi is the perfect spot for a getaway!</p>
                                 </div>
-                                <a href="/venue" class="page-scroll btn btn-sm">Learn More</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-faq.jpeg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>FAQs</h4>
-                                </div>
-                                <div class="timeline-heading">
-                                    <p class="text-muted">Have a Question? Many answers can be found right here in our FAQs</p>
-                                </div>
-                                <a href="/faqs" class="page-scroll btn btn-sm">Learn More</a>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/booklet-icon.png" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Event Booklet</h4>
-                                </div>
-                                <div class="timeline-heading">
-                                    <p class="text-muted">View or Download our event booklet</p>
-                                </div>
-                                <a href="/booklet" class="page-scroll btn btn-sm">Learn More</a>
+                                <!-- <a href="/venue" class="page-scroll btn btn-sm">Learn More</a> -->
                             </div>
                         </li>
                     </ul>
