--- a/_includes/2016_data/about.html
+++ b/_includes/2016_data/about.html
@@ -21,7 +21,7 @@
                                 <div class="timeline-heading">
                                     <p class="text-muted">Read more about our Theme, Vision, and Mission</p>
                                 </div>
-                                <a href="/2016/about" class="page-scroll btn btn-sm">Learn More</a>
+                                <!-- <a href="/2016/about" class="page-scroll btn btn-sm">Learn More</a> -->
                             </div>
                         </li>
                         <li class="timeline-inverted">
