--- a/_includes/2016_data/contact.html
+++ b/_includes/2016_data/contact.html
@@ -3,12 +3,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">We will do our best to answer your request as soon as possible. You may send us your request via <a href="https://www.facebook.com/">Facebook Message</a></h3>
+                    <h3 class="section-subheading text-muted">We will do our best to answer your request as soon as possible.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/hello.world@gmail.com" method="POST" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/konamaconad@gmail.com" method="POST" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
@@ -19,10 +19,10 @@
                                     <input type="email" class="form-control" name="_replyto" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
-                                <div class="control-group form-group">
+                                <!-- <div class="control-group form-group">
                                     <input type="tel" class="form-control" name="phone" placeholder="Your Phone" id="phone" required data-validation-required-message="Please enter your phone number (optional).">
                                     <p class="help-block text-danger"></p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
