--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/logo-small-transparent.png" style="margin-top:-15px" width="150px" alt="icon-about"></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/logo-small-transparent.png" style="margin-top:-15px" width="150px" alt="Camp Corgi"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,7 +19,7 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#speakers">Speakers</a>
+                        <a class="page-scroll" href="#intro">Our Mission</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
