--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -3,35 +3,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Title</h2>
+                    <h2 class="section-heading">Our Resort</h2>
                 </div>
             </div>
             <div class="row container">
-                <p>Topic; <a href="/2016">Link to 2016</a> 
+                <p style="font-size: 180%;">
+                    Corgi Camp is the premier destination for high status corgis. We provide 24 hour service to meet all a Corgi's needs.
+                    Our <b>Walk, Train, Play</b> program is revolutionary and world renown for being enjoyed by Corgi's everywhere.
                 </p>
 
-                <style>
-                .video {
-                position:relative;
-                padding-bottom: 56.25%;
-                height:0;
-                overflow:hidden;
-                align: middle;
-                }
-                .video iframe, .video object, .video embed {
-                position: absolute;
-                margin: auto;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: 100%;
-                height: 100%;
-                }
-                </style>
-
-                <div class="video"><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2Fvideos%2F10153231379946729%2F&width=500&show_text=false&appId=269289086810957&height=280" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe></div><br>
-
-                 <center><a href="#" class="page-scroll btn btn-xl">Registration Closed</a></center>
+                <p style="font-size: 180%;">
+                    Exercise is an important part of anyone's routine, that's why we take our guests on multiple <b>walks</b> everyday, including a 1.5 km walk, which may include running!
+                    Our camp includes advanced <b>training</b> classes every day to help our guests be their best selves.
+                    Finally, nightly <b>play</b> sessions make sure they feel loved and don't get bored.
+                    
+                </p>
+                 <center><a href="#contact" class="page-scroll btn btn-xl">Book Now!</a></center>
             </div>
         </div>
     </section>
