--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-about.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="/campcorgi/css/2016_style/img/icon-about.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -26,7 +26,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-agenda.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="/campcorgi/css/2016_style/img/icon-agenda.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -39,7 +39,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-team.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="/campcorgi/css/2016_style/img/icon-team.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -53,7 +53,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-venue.jpeg" alt="">
+                                <img class="img-circle img-responsive" src="/campcorgi/css/2016_style/img/icon-venue.jpeg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
