--- a/docs/css/2016_style/style.css
+++ b/docs/css/2016_style/style.css
@@ -27,7 +27,6 @@ html {
 body {
     position: absolute;
     margin: 0;
-    padding-bottom: 90px;
     min-height: 100%;
     width: 100%;
     overflow-x: hidden;
@@ -40,7 +39,7 @@ body {
 }
 
 .text-primary {
-    color: #3cb371;
+    color: #FF69B4;
 }
 
 p {
@@ -61,7 +60,7 @@ a.active {
 }
 
 a {
-    color: #3cb371;
+    color: #FF69B4;
 }
 
 a:hover,
@@ -105,12 +104,12 @@ aside.clients,
 }
 
 .btn-primary {
-    border-color: #3cb371;
+    border-color: #FF69B4;
     text-transform: uppercase;
     font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #3cb371;
+    background-color: #FF69B4;
 }
 
 .btn-primary:hover,
@@ -118,7 +117,7 @@ aside.clients,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #3cb371;
+    border-color: #FF69B4;
     color: #fff;
     background-color: #6ecf99;
 }
@@ -144,12 +143,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #3cb371;
-    background-color: #3cb371;
+    border-color: #FF69B4;
+    background-color: #FF69B4;
 }
 
 .btn-primary .badge {
-    color: #3cb371;
+    color: #FF69B4;
     background-color: #fff;
 }
 
@@ -167,8 +166,8 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-sm, .btn-xl {
     color: #fff;
-    background-color: #3cb371;
-    border-color: #3cb371;
+    background-color: #FF69B4;
+    border-color: #FF69B4;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -183,7 +182,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #3cb371;
+    border-color: #FF69B4;
     color: #fff;
     background-color: #6ecf99;
 }
@@ -226,13 +225,13 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #3cb371;
-    background-color: #3cb371;
+    border-color: #FF69B4;
+    background-color: #FF69B4;
 }
 
 .btn-sm .badge,
 .btn-xl .badge {
-    color: #3cb371;
+    color: #FF69B4;
     background-color: #fff;
 }
 
@@ -243,7 +242,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #3cb371;
+    color: #FF69B4;
 }
 
 .navbar-default .navbar-brand:hover,
@@ -258,8 +257,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #3cb371;
-    background-color: #3cb371;
+    border-color: #FF69B4;
+    background-color: #FF69B4;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -268,7 +267,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #3cb371;
+    background-color: #FF69B4;
 }
 
 .navbar-default .nav li a {
@@ -282,13 +281,13 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #3cb371;
+    color: #FF69B4;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #3cb371;
+    background-color: #FF69B4;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -566,7 +565,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #3cb371;
+    background-color: #FF69B4;
 }
 
 .timeline>li .timeline-image h4 {
@@ -733,7 +732,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #3cb371;
+    border-color: #FF69B4;
     box-shadow: none;
 }
 
@@ -815,7 +814,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #3cb371;
+    background-color: #FF69B4;
 }
 
 .btn:focus,
@@ -897,7 +896,7 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #3cb371;
+    background: #FF69B4;
 }
 
 ::selection {
@@ -914,6 +913,6 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #3cb371;
+    webkit-tap-highlight-color: #FF69B4;
 }
 
