--- a/docs/css/2016_style/style.css
+++ b/docs/css/2016_style/style.css
@@ -67,7 +67,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #6ecf99;
+    color: #e55ea2;
 }
 
 h1,
@@ -119,7 +119,7 @@ aside.clients,
 .open .dropdown-toggle.btn-primary {
     border-color: #FF69B4;
     color: #fff;
-    background-color: #6ecf99;
+    background-color: #e55ea2;
 }
 
 .btn-primary:active,
@@ -184,7 +184,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-xl {
     border-color: #FF69B4;
     color: #fff;
-    background-color: #6ecf99;
+    background-color: #e55ea2;
 }
 
 .btn-sm:active,
@@ -249,7 +249,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #6ecf99;
+    color: #e55ea2;
 }
 
 .navbar-default .navbar-collapse {
@@ -293,7 +293,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #6ecf99;
+    background-color: #e55ea2;
 }
 
 @media(min-width:768px) {
