Fix typo and mobile logo issue

--- a/_includes/2017_data/intro.html
+++ b/_includes/2017_data/intro.html
@@ -9,16 +9,15 @@
             <div class="row container">
                 <p style="font-size: 180%;">
                     Corgi Camp is the premier destination for high status corgis. We provide 24 hour service to meet all a Corgi's needs.
-                    Our <b>Walk, Train, Play</b> program is revolutionary and world renown for being enjoyed by Corgi's everywhere.
+                    Our <b>Walk, Train, Play</b> program is revolutionary and world renowned for being enjoyed by Corgi's everywhere.
                 </p>
 
                 <p style="font-size: 180%;">
                     Exercise is an important part of anyone's routine, that's why we take our guests on multiple <b>walks</b> everyday, including a 1.5 km walk, which may include running!
                     Our camp includes advanced <b>training</b> classes every day to help our guests be their best selves.
                     Finally, nightly <b>play</b> sessions make sure they feel loved and don't get bored.
-                    
                 </p>
-                 <center><a href="#contact" class="page-scroll btn btn-xl">Book Now!</a></center>
+                <center><a href="#contact" class="page-scroll btn btn-xl">Book Now!</a></center>
             </div>
         </div>
     </section>
